# laa-cla-admin-service

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  local-setup.sh  manage.py  pyproject.toml
.github/actions/run-unit-tests/: action.yml
.github/workflows/: build.yml  cleanup-release.yml  deploy-uat-feature.yml  deploy.yml  feature-branch.yml  main-branch.yml
apps/cla_auth/: admin.py  apps.py
apps/cla_auth/management/commands/: create_local_admin.py
apps/cla_auth/migrations/: 0001_initial.py
apps/cla_auth/tests/: test_admin.py
apps/reports/: urls.py  views.py
apps/reports/templatetags/: reports_tags.py
config/: asgi.py  urls.py  views.py  wsgi.py
config/settings/: base.py  local.py  production.py  uat.py
config/tests/: test_status.py
docker/: Dockerfile  compose.yaml
helm_deploy/laa-cla-admin-service/: Chart.yaml  values.yaml
helm_deploy/laa-cla-admin-service/files/: dashboard.json
helm_deploy/laa-cla-admin-service/templates/: NOTES.txt  _helpers.tpl  dashboard.yaml  deployment.yaml  ingress.yaml  service.yaml
helm_deploy/laa-cla-admin-service/templates/tests/: test-connection.yaml
helm_deploy/laa-cla-admin-service/values/: values-dev.yaml  values-production.yaml  values-staging.yaml  values-uat.yaml
templates/: base.html
templates/admin/: base_site.html  index.html  nav_sidebar.html
templates/admin/reports/: index.html  users.html  users_report.html
templates/components/: header.html
