[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "laa-cla-admin-service"
version = "0.1.0"
description = "Django administration service for Civil Legal Advice"
requires-python = ">=3.14,<3.15"
dependencies = [
    "Django>=5.2,<5.3",
    "gunicorn>=23,<27",
    "psycopg[binary]>=3.2,<4",
    "whitenoise>=6.6,<7",
]

[project.optional-dependencies]
development = [
    "pre-commit==4.6.0",
    "pytest>=8,<10",
    "pytest-django>=4.11,<5",
    "ruff>=0.12,<1",
]

[tool.setuptools.packages.find]
where = ["."]
include = [
    "apps*",
    "config*",
]
exclude = [
    "helm_deploy*",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.local"
python_files = ["test_*.py"]

[tool.ruff]
line-length = 88
target-version = "py314"
